Second excercise done

--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "firstpublishforhexlet",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "First project of Hexlet & First npm publish",
   "main": "index.js",
   "bin": {
-     "brain-games": "dist/bin/brain-games.js"
-   },
+    "brain-games": "dist/bin/brain-games.js"
+  },
   "files": [
     "dist"
-   ],
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "babel-node": "babel-node",
@@ -29,6 +29,7 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-0": "^6.24.1"
+    "babel-preset-stage-0": "^6.24.1",
+    "readline-sync": "^1.4.9"
   }
 }
