--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "dist"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "make lint",
     "babel-node": "babel-node",
     "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "eslint": "eslint"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,11 @@
   },
   "homepage": "https://github.com/yoscro/project-lvl1-s316#readme",
   "dependencies": {
+    "babel-eslint": "^8.2.6",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^13.0.0",
+    "eslint-plugin-babel": "^5.1.0",
+    "eslint-plugin-import": "^2.13.0",
     "readline-sync": "^1.4.9"
   },
   "devDependencies": {
