--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "firstpublishforhexlet",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "First project of Hexlet & First npm publish",
   "keywords": [
     "Hexlet",
     "Brain-games"
   ],
   "bin": {
-    "brain-even": "dist/bin/brain-even.js"
+    "brain-even": "dist/bin/brain-even.js",
+    "brain-calc": "dist/bin/brain-calc.js"
   },
   "files": [
     "dist"
@@ -29,6 +30,7 @@
   },
   "homepage": "https://github.com/yoscro/project-lvl1-s316#readme",
   "dependencies": {
+    "hexlet-pairs": "^1.0.8",
     "readline-sync": "^1.4.9"
   },
   "devDependencies": {
