Balance Game Added

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "firstpublishforhexlet",
-  "version": "1.0.15",
+  "version": "1.0.17",
   "description": "First project of Hexlet & First npm publish",
   "keywords": [
     "Hexlet",
@@ -9,7 +9,8 @@
   "bin": {
     "brain-even": "dist/bin/brain-even.js",
     "brain-calc": "dist/bin/brain-calc.js",
-    "brain-gcd": "dist/bin/brain-gcd.js"
+    "brain-gcd": "dist/bin/brain-gcd.js",
+    "brain-balance": "dist/bin/brain-balance.js"
   },
   "files": [
     "dist"
