--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "firstpublishforhexlet",
-  "version": "1.0.17",
+  "version": "1.0.18",
   "description": "First project of Hexlet & First npm publish",
   "keywords": [
     "Hexlet",
@@ -10,7 +10,8 @@
     "brain-even": "dist/bin/brain-even.js",
     "brain-calc": "dist/bin/brain-calc.js",
     "brain-gcd": "dist/bin/brain-gcd.js",
-    "brain-balance": "dist/bin/brain-balance.js"
+    "brain-balance": "dist/bin/brain-balance.js",
+    "brain-progression": "dist/bin/brain-progression.js"
   },
   "files": [
     "dist"
